@@ -8,7 +8,7 @@
 <div id="txtMobile" class="homeMobile txtMobile" align="middle">
 	<h2 align="middle">SAMENVATTINGEN</h2>
 	<p align="middle">
-	Dit is de officiële website van Abdellah. Voor de samenvattingen klik je op de grote knop links waarop 'vakken' staat en voor een lijst van de laatst toegevoegde samenvattingen kan je beneden kijken. Onderaan de vakken kan je op "Module" duwen om tussen verschillende modules te kiezen. Als je de samenvattingen wilt bekijken kan je op de naam van de samenvatting duwen en als je hem wilt downloaden kan je op de downloadknop duwen.
+	Dit is de officiële website van Abdellah. Voor de samenvattingen klik je op de grote knop links waarop 'vakken' staat en voor een lijst van de laatst toegevoegde samenvattingen kan je beneden kijken. Als je de samenvattingen wilt bekijken kan je op de naam van de samenvatting duwen en als je hem wilt downloaden kan je op de downloadknop duwen.
 	</p>
 </div>
 <div>
