@@ -10,14 +10,16 @@
 </head>
 <body>
 <div id="navBarFull" onclick="closeNav()">
-</div>
+</div>	
 <div class="navBar" id="navBar">
-	<div id="closeTab" class="closeTab" onclick="navTab()">
+	<div id="closeTab" class="closeTab" onclick="moduleTab()">
 	</div>
 	<a><img class="closebtn" src="cross.svg" onclick="closeNav()"></a>
-		<div class="list1">
+	<div class="list1">
+				<a href="javascript:void(0)" class="navList a0" onclick="moduleTab()">Module 2</a>
+				<div class="hline"></div>
 			<a href="javascript:void(0)" class="navList a1" onclick="home()">Home</a>
-	    	<a href="javascript:void(0)" class="navList a2" onclick="show('#exam')">EXAMENS</a>
+			<a href="javascript:void(0)" class="navList a2" onclick="show('#exam')">EXAMENS</a>
 			<a href="javascript:void(0)" class="navList a3" onclick="show('#aard')">Aardrijkskunde</a>
 			<a href="javascript:void(0)" class="navList a4" onclick="show('#bio')">Biologie</a>
 			<a href="javascript:void(0)" class="navList a5" onclick="show('#chem')">Chemie</a>
@@ -25,31 +27,32 @@
 			<a href="javascript:void(0)" class="navList a7" onclick="show('#frans')">Frans</a>
 			<a href="javascript:void(0)" class="navList a8" onclick="show('#fys')">Fysica</a>
 			<a href="javascript:void(0)" class="navList a9" onclick="show('#gesch')">Gechiedenis</a>
-        	<a href="javascript:void(0)" class="navList a10" onclick="show('#ned')">Nederlands</a>
+       		<a href="javascript:void(0)" class="navList a10" onclick="show('#ned')">Nederlands</a>
 			<a href="javascript:void(0)" class="navList a11" onclick="show('#wisk')">Wiskunde</a>
-			<div id="tab" class="tab">
-		    <a class="navList A1" onclick="oud()">Module 1</a>
-		    <a class="navList A2" onclick="nieuw()">Module 2</a>
-         	</div>
-	        <a href="javascript:void(0)" class="navList a12" id="a12" onclick="navTab()">Module 2 ^</a>
-		</div>
-		<div class="list2">
+				<div class="module">
+					<a href="javascript:void()" id="m1" onclick="oud()">Module 1</a>
+					<a href="javascript:void()" id="m2" onclick="nieuw()">Module 2</a>
+	    		</div>
+	</div>
+	<div class="list2">
+				<a href="javascript:void(0)" class="navList a0" onclick="moduleTab()">Module 1</a>
+				<div class="hline"></div>
 			<a href="javascript:void(0)" class="navList a1" onclick="home()">Home</a>
-			<a href="javascript:void(0)" class="navList a3" onclick="show('#aardOud')">Aardrijkskunde</a>
-			<a href="javascript:void(0)" class="navList a4" onclick="show('#bioOud')">Biologie</a>
-			<a href="javascript:void(0)" class="navList a5" onclick="show('#chemOud')">Chemie</a>
-			<a href="javascript:void(0)" class="navList a6" onclick="show('#engOud')">Engels</a>
-			<a href="javascript:void(0)" class="navList a7" onclick="show('#fransOud')">Frans</a>
-			<a href="javascript:void(0)" class="navList a8" onclick="show('#fysOud')">Fysica</a>
-			<a href="javascript:void(0)" class="navList a9" onclick="show('#geschOud')">Gechiedenis</a>
-        	<a href="javascript:void(0)" class="navList a10" onclick="show('#nedOud')">Nederlands</a>
-			<a href="javascript:void(0)" class="navList a11" onclick="show('#wiskOud')">Wiskunde</a>
-			<div id="tab" class="tab">
-		    <a class="navList A1" onclick="oud()">Module 1</a>
-		    <a class="navList A2" onclick="nieuw()">Module 2</a>
-         	</div>
-	        <a href="javascript:void(0)" class="navList a12" id="a12" onclick="navTab()">Module 2 ^</a>
-		</div>
+			<a href="javascript:void(0)" class="navList a3" onclick="show('#aardM1')">Aardrijkskunde</a>
+			<a href="javascript:void(0)" class="navList a4" onclick="show('#bioM1')">Biologie</a>
+			<a href="javascript:void(0)" class="navList a5" onclick="show('#chemM1')">Chemie</a>
+			<a href="javascript:void(0)" class="navList a6" onclick="show('#engM1')">Engels</a>
+			<a href="javascript:void(0)" class="navList a7" onclick="show('#fransM1')">Frans</a>
+			<a href="javascript:void(0)" class="navList a8" onclick="show('#fysM1')">Fysica</a>
+			<a href="javascript:void(0)" class="navList a9" onclick="show('#geschM1')">Gechiedenis</a>
+       		<a href="javascript:void(0)" class="navList a10" onclick="show('#nedM1')">Nederlands</a>
+			<a href="javascript:void(0)" class="navList a11" onclick="show('#wiskM1')">Wiskunde</a>
+			<br>
+				<div class="module">
+					<a href="javascript:void()" id="m1" onclick="oud()">Module 1</a>
+					<a href="javascript:void()" id="m2" onclick="nieuw()">Module 2</a>
+	    		</div>
+	</div>
 </div>
 <button onclick="openNav()" class="openBtn" >V<br>A<br>K<br>K<br>E<br>N</button>
 <div class="pdf">
@@ -64,15 +67,15 @@
 			<a href="javascript:void(0)" onclick="openSumm('summ_wisk_geo.pdf', 'https://docs.google.com/gview?embedded=true&url=https://samenvattingen.github.io/summ_wisk_geo.pdf')">Geogebra &nbsp;</a>
 			<a href="summ_wisk_geo.pdf" download="Samenvatting Geogebra"><img src="dl.png" alt="download" height="20" width="20"></a>
 			<div class="hline"></div>
-			<br><br>
+			<br>
 			<a href="javascript:void(0)" onclick="openSumm('summ_wisk_complex.pdf', 'https://docs.google.com/gview?embedded=true&url=https://samenvattingen.github.io/summ_wisk_complex.pdf')">Complexe Getallen &nbsp;</a>
 			<a href="summ_wisk_complex.pdf" download="Samenvatting Complexe Getallen"><img src="dl.png" alt="download" height="20" width="20"></a>
 			<div class="hline"></div>
-			<br><br>
+			<br>
 			<a href="javascript:void(0)" onclick="openSumm('summ_wisk_funct.pdf', 'https://docs.google.com/gview?embedded=true&url=https://samenvattingen.github.io/summ_wisk_funct.pdf')">Reële Functies &nbsp;</a>
 			<a href="summ_wisk_funct.pdf" download="Samenvatting Reële Functies"><img src="dl.png" alt="download" height="20" width="20"></a>
 			<div class="hline"></div>
-			<br><br>
+			<br>
 			<a href="javascript:void(0)" onclick="openSumm('summ_wisk_gon.pdf', 'https://docs.google.com/gview?embedded=true&url=https://samenvattingen.github.io/summ_wisk_gon.pdf')">Goniometrie &nbsp;</a>
 			<a href="summ_wisk_gon.pdf" download="Samenvatting Goniometrie"><img src="dl.png" alt="download" height="20" width="20"></a>
 			<div class="hline"></div>		
@@ -106,7 +109,7 @@
 			<a href="javascript:void(0)" onclick="openSumm('summ_chem_atom.pdf', 'https://docs.google.com/gview?embedded=true&url=https://samenvattingen.github.io/summ_chem_atom.pdf')">Atomen en Moleculen &nbsp;</a>
 			<a href="summ_chem_atom.pdf" download="Samenvatting Atomen en Moleculen"><img src="dl.png" alt="download" width="20" height="20"></a>
 			<div class="hline"></div>
-			<br><br>
+			<br>
 			<a href="javascript:void(0)" onclick="openSumm('summ_chem_even.pdf', 'https://docs.google.com/gview?embedded=true&url=https://samenvattingen.github.io/summ_chem_even.pdf')">Chemisch Evenwicht &nbsp;</a>
 			<a href="summ_chem_atom.pdf" download="Samenvatting Atomen en Moleculen"><img src="dl.png" alt="download" width="20" height="20"></a>
 			<div class="hline"></div>
@@ -150,7 +153,7 @@
 			<a href="javascript:void(0)" onclick="openSumm('summ_gesch_altM2.pdf', 'https://docs.google.com/gview?embedded=true&url=https://samenvattingen.github.io/summ_gesch_altM2.pdf')">Imperialisme &nbsp;</a>
 			<a href="summ_gesch_altM2.pdf" download="Samenvatting Alternatief Examen Gesch M2"><img src="dl.png" alt="download" width="20" height="20"></a>
 			<div class="hline"></div>
-			<br><br>
+			<br>
 			<a href="javascript:void(0)" onclick="openSumm('summ_gesch_strijd.pdf', 'https://docs.google.com/gview?embedded=true&url=https://samenvattingen.github.io/summ_gesch_strijd.pdf')">Sociale Strijd &nbsp;</a>
 			<a href="summ_gesch_strijd.pdf" download="Samenvatting Sociale Strijd"><img src="dl.png" alt="download" width="20" height="20"></a>
 			<div class="hline"></div>
@@ -168,26 +171,43 @@
 	</div>
 </div>
 <div id="exam" class="popup">
-	<span class="closePopup" onclick="closeAll()">&times;</span>
 	<div class="popup_content">
+<<<<<<< HEAD
+		<img class="cross" src="cross.svg" onclick="closeAll()">
+		<div class="popupContentInner">
+=======
+>>>>>>> 5923d2c34b75eb03e125ca2a96e57db2df675111
 		<a href="javascript:void(0)" onclick="openSumm('summ_eng_exam.pdf', 'https://docs.google.com/gview?embedded=true&url=https://samenvattingen.github.io/summ_eng_exam.pdf')">Engels &nbsp;</a>
 		<a href="summ_eng_exam.pdf" download="Samenvatting engels examen"><img src="dl.png" alt="download" width="15" height="15"></a>
 		<div class="hline"></div>
 		<br><br>
+<<<<<<< HEAD
+		<a href="javascript:void(0)" onclick="openSumm('summ_bio.pdf', 'https://docs.google.com/gview?embedded=true&url=https://samenvattingen.github.io/summ_bio.pdf')">Biologie &nbsp;</a>
+		<a href="summ_bio.pdf" download="Samenvatting biologie examen"><img src="dl.png" alt="download" width="15" height="15"></a>
+		<div class="hline"></div>
+		<br><br>
+		<!--
+		<a href="javascript:void(0)" onclick="openSumm('summ_frans_exam.pdf', 'https://docs.google.com/gview?embedded=true&url=https://samenvattingen.github.io/summ_frans_exam.pdf')">Frans &nbsp;</a>
+=======
 		<a href="javascript:void(0)" onclick="openSumm('summ_bio.pdf', 'https://docs.google.com/gview?embedded=true&url=https://samenvattingen.github.io/summ_bio.pdf')">Biologie  &nbsp;</a>
 		<a href="summ_bio.pdf" download="Samenvatting biologie examen"><img src="dl.png" alt="download" width="15" height="15"></a>
 		<div class="hline"></div>
 		<br><br>
 <!--
 		<a href="javascript:void(0)" onclick="openSumm('summ_frans_exam.pdf', 'https://docs.google.com/gview?embedded=true&url=https://samenvattingen.github.io/summ_frans_exam.pdf')">Frans examen &nbsp;</a>
+>>>>>>> 5923d2c34b75eb03e125ca2a96e57db2df675111
 		<a href="summ_frans_exam.pdf" download="Samenvatting frans examen"><img src="dl.png" alt="download" width="15" height="15"></a>
 		<div class="hline"></div>
 		<br><br>
-		<a href="javascript:void(0)" onclick="openSumm('summ_fys_exam.pdf', 'https://docs.google.com/gview?embedded=true&url=https://samenvattingen.github.io/summ_fys_exam.pdf')">fysica examen &nbsp;</a>
+		<a href="javascript:void(0)" onclick="openSumm('summ_fys_exam.pdf', 'https://docs.google.com/gview?embedded=true&url=https://samenvattingen.github.io/summ_fys_exam.pdf')">fysica &nbsp;</a>
 		<a href="summ_fys_exam.pdf" download="Samenvatting fysica examen"><img src="dl.png" alt="download" width="15" height="15"></a>
 		<div class="hline"></div>
 		<br><br>
+<<<<<<< HEAD
+		-->
+=======
 	-->
+>>>>>>> 5923d2c34b75eb03e125ca2a96e57db2df675111
 		<a href="javascript:void(0)" onclick="openSumm('summ_aard_exam.pdf', 'https://docs.google.com/gview?embedded=true&url=https://samenvattingen.github.io/summ_aard_exam.pdf')">Aardrijkskunde &nbsp;</a>
 		<a href="summ_aard_exam.pdf" download="Samenvatting aardrijkskunde examen"><img src="dl.png" alt="download" width="15" height="15"></a>
 		<div class="hline"></div>
@@ -197,6 +217,8 @@
 		<div class="hline"></div>
 	</div>
 </div>
+<<<<<<< HEAD
+=======
 <!--																			OUDE SAMENVATTINGEN
 <div id="aard" class="popup">
 	<div class="popup_content">
@@ -286,6 +308,7 @@
 		</div>
 	</div>
 </div>
+>>>>>>> 5923d2c34b75eb03e125ca2a96e57db2df675111
 -->
 </body>
 </html>
