@@ -24,6 +24,12 @@ h2 {
 	text-decoration-line: underline;
 	font-weight: bold;
 }
+img {
+	float: right;
+}
+img:hover {
+	cursor: pointer;
+}
 .txt {
 	width: 60%;
 	margin-top: 3%;
@@ -126,7 +132,6 @@ h2 {
 	color: grey;
 }
 .navBar .a2{
-  color: grey;
 }
 #navBarFull {
 	width: 100%;
@@ -136,23 +141,25 @@ h2 {
 	z-index: 1;	
 }
 .list1 {
-    position: absolute;
-    top: 2%;
-    left: 0;
-    overflow-y: auto;
-    overflow-x: hidden;
-    max-height: 80%;
-    float: left;
+	position: absolute;
+	top: 2%;
+	left: 0;
+	overflow-y: auto;
+	overflow-x: hidden;
+	max-height: 82%;
+	width: 85%;
+	float: left;
 }
 .list2 {
-    position: absolute;
-    top: 2%;
-    left: 0;
-    overflow-y: auto;
-    overflow-x: hidden;
-    max-height: 80%;
-    float: left;
-    display: none;
+	display: none;
+	position: absolute;
+	top: 2%;
+	left: 0;
+	overflow-y: auto;
+	overflow-x: hidden;
+	max-height: 82%;
+	width: 85%;
+	float: left;
 }
 .closebtn {
 	float: right;
@@ -172,21 +179,23 @@ h2 {
 .popup {
 	text-decoration-color: black;
 	display: none;
-	position: fixed;
+	position: absolute;
 	z-index: 4;
 	left: 0;
 	top: 0;
 	width: 100%;
 	height: 100%;
-	/*overflow: auto;*/
 	background-color: rgb(0, 0, 0);
 	background-color: rgba(0, 0, 0, 0.65);
 }
 .popup_content {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 	font-size: 20px;
 	text-decoration: none;
 	background-color: white;
-	margin: 12% auto;
 	padding: 10px;
 	border: 1px solid lightgrey;
 	border-radius: 5px;
@@ -232,35 +241,29 @@ h2 {
 	height: 1px;
 	background: gray;
 }
-.chooseModule {
-	
-}
-img {
-	float: right;
-}
-.a12 {
-	left: 0;
-	z-index: 0;
-}
-.tab {
-	position: absolute;
-	display: inline-block;
-	width: 80%;
-	left: 25px;
-	bottom: 35px;
+.module {
 	background-color: white;
-	z-index: 1; 
-	border: 1px solid lightgrey;
-	border-radius: 5px;
+	display: inline-block;
 	display: none;
-}
-.tab:hover{
-	cursor: pointer;
-}
-.closeTab {
-	width: 100%;
-	height: 88%;
 	position: absolute;
-	top: 0;
+	border: 1px lightgrey solid;
+	border-radius: 5px;
+	top: 9%;
+	left: 10%;
+	-webkit-box-shadow: 0px 0px 22px 6px rgba(0,0,0,0.06);
+	-moz-box-shadow: 0px 0px 22px 6px rgba(0,0,0,0.06);
+	box-shadow: 0px 0px 22px 6px rgba(0,0,0,0.06);
+}
+.closeTab{
+	width: 100%;
+	height: 90%;
+	position: absolute;
+	bottom: 0;
 	display: none;
+}
+#m1 {
+	margin-left: -15%;
+}
+#m2 {
+	margin-left: -15%;
 }
