@@ -1,5 +1,15 @@
 Laatst toegevoegde samenvattingen:
 
+04/03/18: Nieuwe samenvatting biologie: Examen M2
+
+04/03/18: Nieuwe samenvatting engels: Examen M2
+
+04/03/18: Nieuwe samenvatting nederlands: Examen M2
+
+03/03/18: Nieuwe samenvatting aardrijkskunde: Examen M2
+
+03/03/18: BELANGRIJK: Samenvattingen voor de examens staan onder het vak EXAMENS
+
 28/02/18: Nieuwe samenvatting wiskunde: Geogebra
 
 25/02/18: Nieuwe samenvatting geschiedenis: Imperialisme
